kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: garu-io
  namespace: garu-io
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: garu-io
