kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  namespace: garu-io
  annotations:
    "cert-manager.io/cluster-issuer": "letsencrypt-prod"
spec:
  rules:
  - host: "garu.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garu-io
            port:
              number: 80
  tls:
    - hosts:
        - garu.io
      secretName: garu-io-cert
